Fix mobile layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+.container {
+  max-width: 600px;
+}
+
 .dropdown * {
   animation: none !important;
 }
